# abis-mapping

./: .flake8  .git-blame-ignore-revs  .gitignore  .mypy.ini  404.html  CHANGELOG.md  README.md  index.html  latest  mkdocs.yml  pyproject.toml  result.ttl  shaping.py  sitemap.xml  versions.json
.github/workflows/: ci.yml  documentation.yml  release.yml  releases.yml  testing.yml
4.2.test/: 404.html  index.html
4.2.test/incidental_occurrence_data_v2/: index.html
4.2.test/survey_metadata_v1/: index.html
4.2.test/survey_occurrence_data_v1/: index.html
4.2.test/survey_site_data_v1/: index.html
abis_mapping/: __init__.py  base.py  loader.py  settings.py  utils.py
abis_mapping/base/: __init__.py  exceptions.py  loader.py  mapper.py  metadata.py  types.py
abis_mapping/documentation/: __init__.py
abis_mapping/models/: __init__.py  identifier.py  metadata.py  schema.py  spatial.py
abis_mapping/plugins/: __init__.py  chained_inclusion.py  checks.py  chronological.py  coordinates.py  default_lookup.py  empty.py  geometry_validation.py  list.py  logical_or.py  lookup_match.py  mutual_exclusion.py  mutual_inclusion.py  related_site_id_part_of_lookup.py  related_site_validation.py  required.py  row_constraint.py  schema.py  sequence.py  site_id_or_iri_validation.py  site_identifier_match.py  sites_geometry.py  string_customized.py  survey_id_validation.py  tabular.py  timestamp.py  unique_together.py  wkt.py
abis_mapping/templates/: __init__.py
abis_mapping/tools/: fields.py
abis_mapping/types/: __init__.py  geometry.py  metadata.py  schema.py  spatial.py  temporal.py
abis_mapping/utils/: __init__.py  checks.py  chronological.py  chunking.py  coords.py  csv.py  geometry.py  iri_patterns.py  namespaces.py  plugin.py  rdf.py  strings.py  terms.py  timestamps.py  types.py  vocabs.py
abis_mapping/vocabs/: __init__.py  basis_of_record.py  check_protocol.py  conservation_authority.py  conservation_jurisdiction.py  establishment_means.py  geodetic_datum.py  habitat.py  identification_method.py  identification_qualifier.py  kingdom.py  life_stage.py  occurrence_status.py  organism_quantity_type.py  preparations.py  relationship_to_related_site.py  reproductive_condition.py  sampling_effort_unit.py  sampling_protocol.py  sensitivity_authority.py  sensitivity_category.py  sequencing_method.py  sex.py  site_type.py  survey_type.py  target_habitat_scope.py  target_taxonomic_scope.py  taxon_rank.py  taxon_tank.py  threat_status.py  visit_protocol_name.py
dev/: 404.html  index.html  sitemap.xml
dev/archived_templates/: index.html
dev/dataset_properties/: index.html
dev/incidental_occurrence_data-v2.0.0.csv/: index.html
dev/incidental_occurrence_data-v3.0.0.csv/: index.html
dev/incidental_occurrence_data_v2/: index.html
dev/incidental_occurrence_delete-v1.0.0.csv/: index.html
dev/submission_properties/: index.html
dev/survey_metadata-v1.0.0.csv/: index.html
dev/survey_metadata-v2.0.0.csv/: index.html
dev/survey_metadata-v3.0.0.csv/: index.html
dev/survey_metadata_v1/: index.html
dev/survey_occurrence_data-v1.0.0.csv/: index.html
dev/survey_occurrence_data-v2.0.0.csv/: index.html
dev/survey_occurrence_data-v3.0.0.csv/: index.html
dev/survey_occurrence_data_v1/: index.html
dev/survey_site_data-v1.0.0.csv/: index.html
dev/survey_site_data-v2.0.0.csv/: index.html
dev/survey_site_data-v3.0.0.csv/: index.html
dev/survey_site_data_v1/: index.html
dev/survey_site_visit_data-v2.0.0.csv/: index.html
dev/survey_site_visit_data-v3.0.0.csv/: index.html
docs/: __init__.py  index.md  instructions.py  model_json.py
docs/contexts/: __init__.py  base.py  incidental_occurrence_data_v2.py  incidental_occurrence_data_v3.py  incidental_occurrence_delete_v1.py  survey_metadata.py  survey_metadata_v2.py  survey_metadata_v3.py  survey_occurrence_data.py  survey_occurrence_data_v2.py  survey_occurrence_data_v3.py  survey_site_data.py  survey_site_data_v2.py  survey_site_data_v3.py  survey_site_visit_data_v2.py  survey_site_visit_data_v3.py
docs/models/: README.md
docs/pages/: dataset_properties.md  index.md  submission_properties.md
docs/tables/: __init__.py  base.py  fields.py  threat_status.py  threat_status_conservation_jurisdiction.py  vocabs.py
docs/template_instructions/: incidental_occurrence_data.md
docs/templates/: base.md  index.html
incidental_occurrence_data_v2/: index.html
scripts/: generate_example_ttl_files.py  generate_instructions.sh  generate_model_docs.sh  lint.sh  test.sh  typecheck.sh
search/: search_index.json
survey_metadata_v1/: index.html
survey_occurrence_data_v1/: index.html
survey_site_data_v1/: index.html
templates/01_dwc_mvp/: README.md  mapping.py  metadata.json  template.json
tests/: conftest.py  helpers.py
tests/base/: test_mapper.py
tests/docs/: conftest.py  test_instructions.py  test_model_json.py  test_subumission_properties.py
tests/models/: test_metadata.py  test_schema.py  test_spatial.py  test_temporal.py
tests/plugins/: test_chained_inclusion.py  test_checks.py  test_chronological.py  test_coordinates.py  test_customized_string.py  test_default_lookup.py  test_empty.py  test_list.py  test_list_field.py  test_logical_or.py  test_lookup_match.py  test_mutual_exclusion.py  test_mutual_inclusion.py  test_related_site_id_part_of_lookup.py  test_related_site_validation.py  test_required.py  test_row_constraint.py  test_sequence.py  test_site_geometry.py  test_site_id_or_iri_validation.py  test_site_identifier_match.py  test_survey_id_validation.py  test_tabular.py  test_timestamp.py  (+2 more)
tools/: fields.py  tabler.py  vocabs.py
v4.2.1-bdrsps721rc3/: index.html  sitemap.xml
v4.2.2/: 404.html  index.html
v4.2.3/: 404.html  index.html
v4.3.0/: 404.html
v5.0.0-rc1/: 404.html  index.html  sitemap.xml
v6.0.0-rc1/: sitemap.xml
v6.0.0-rc2/: sitemap.xml
v6.0.0-rc4/: sitemap.xml
v7.0.0/: sitemap.xml
v7.0.0-rc1/: sitemap.xml
v8.0.0/: sitemap.xml
v8.0.0-rc2/: 404.html  sitemap.xml
v8.0.0-rc3/: sitemap.xml
v8.1.0/: sitemap.xml
v9.0.0/: sitemap.xml
v9.0.1/: sitemap.xml
(+447 files in other folders)
