[project]
name = "abis-mapping"
version = "9.0.0"
description = "Provides templates and mappings to translate tabular data to ABIS rdf"
authors = [
    {name = "Gaia Resources", email = "dev@gaiaresources.com.au"}
]
dynamic = ["requires-python", "dependencies"]

[build-system]
requires = ["poetry-core >= 2.0.0, <3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0.0, <3"

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "^7.1.1"
python-slugify = "^8.0.4"
frictionless = {extras = ["excel"], version = "^5.18.1"}
python-dateutil = "^2.9.0.post0"
shapely = "^2.0.6"
pyproj = "^3.7.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
numpy = "^2.2.0"
attrs = "^25.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
mypy = "==1.17.1"
types-python-dateutil = "==2.9.0.20250809"  # keep version synced with actual library
ruff = "==0.12.9"
import-linter = "^2.4"
pandas = "^2.3.1"
pyshacl = "^0.30.1"
jinja2 = "^3.1.6"
mkdocs-material = "^9.6.17"
mike = "^2.1.3"
poethepoet = "^0.37.0"
jsonschema-markdown = "^2025.7.0"

[tool.poe.tasks]
lint = "ruff check"
lint-fix = "ruff check --fix-only"
lint-imports = "lint-imports"
format = "ruff format"
format-check = "ruff format --check --diff"
typecheck = "mypy tests/ abis_mapping/ docs/ scripts/"
generate-instructions = "./scripts/generate_instructions.sh"
generate-model-docs = "./scripts/generate_model_docs.sh"
generate-example-ttl-files = "python ./scripts/generate_example_ttl_files.py"
test = "pytest tests --cov=abis_mapping --cov=docs --cov-report=term-missing"

[tool.pytest.ini_options]
filterwarnings = [
    # Treat any warnings in tests as errors.
    'error',
    # If certain warning should be allowed/ignored add them here.
    # https://docs.pytest.org/en/stable/how-to/capture-warnings.html#controlling-warnings
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    # Default rules
    "E4", "E7", "E9", "F",
    # additional rules
    "B",  # bugbear
    "A",  # builtins
    "S",  # bandit
    "G",  # logging-format
    "RUF100", # unused suppressions
    "INP001",  # no namespace packages
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py for re-exporting
"__init__.py" = ["F401"]
# Allow using assert in tests
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.importlinter]
# Import linter is a tool to enfore structure in a python program.
# See https://import-linter.readthedocs.io/en/stable/readme.html.
root_packages = [
    "abis_mapping",
    "docs",
    "scripts",
    "tests",
]

[[tool.importlinter.contracts]]
# The abis_mapping module must not depend on tests/scripts/docs modules.
name = "abis_mapping module independence"
type = "forbidden"
source_modules = ["abis_mapping"]
forbidden_modules = ["tests", "scripts", "docs"]

[[tool.importlinter.contracts]]
# The docs module must not depend on tests/scripts modules.
name = "docs module independence"
type = "forbidden"
source_modules = ["docs"]
forbidden_modules = ["tests", "scripts"]

[[tool.importlinter.contracts]]
# Enfore a layered structure in the "abis_mapping" module. Helps prevent circular imports.
# Modules in each layer can only import from modules in a lower layer.
# "foo | bar" means foo and bar are considered one layer, and must not import each other.
name = "abis_mapping structure"
type = "layers"
exhaustive = true
containers = ["abis_mapping"]
layers = [
    # top-level modules
    "templates | documentation",
    # mid-level modules
    "base | plugins | vocabs",
    "models",
    # low-level modules
    "utils",
    "settings",
]

[[tool.importlinter.contracts]]
# Enforce a layered structure in the "tests" module.
name = "test structure"
type = "layers"
exhaustive = true
containers = ["tests"]
layers = [
    # conftest is the top layer, fixtures declared here should be injected by pytest, not imported by tests.
    "conftest",
    # test modules are independant, should not import each other.
    "base | docs | models | plugins | templates | utils | vocabs",
    # low-level helpers.
    "helpers",
]
